client/src/app/project/project.component.css
* {
  box-sizing: border-box; 
}

#projectHeader {
  background-color: #292929;
  width: 40rem;
  height: 3.2rem;
  border-radius: 10px;
  margin-left: auto;
  margin-right: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0 0.75rem;
}

#projectName {
  margin: 0 1rem;
  width: 23rem;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.5rem;
}

#projectName p {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap; 
}

.headerButtons {
  width: 3rem;
  height: 2.2rem;
}

#openFilter, #openAddCategory {
  margin-left: 0.5rem;
}

#openAddCategory {
  margin-left: auto;
  margin-right: 0;
}

#main-container {
  display: flex;
  width: auto;
  height: auto;
  margin-left: 2rem;
  margin-right: 2rem;
  margin-top: 2rem;
  overflow-x: auto;
}

.category {
  width: 15.67vw;
  height: 100%;
  margin-top: 0.5rem;
  margin-right: 0.5rem;
}

h2 {
  text-align: center;
  font-size: 1.3rem;
  font-weight: 500;
  z-index: 0;
}

.cat-header {
  display: flex;
  background-color: #292929;
  border-radius: 10px;
  align-items: center;
  position: relative;
  height: 3.2rem;
  padding: 1rem;
  justify-content: center;
  cursor: pointer;
}

.cat-header:hover {
  border: 1px solid #545454;
}

.cat-header h2 {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap; 
  margin: 0 1.8rem;
}

.addtask {
  position: absolute;
  transform: translateY(-50%);
  left: 0.5rem;
  z-index: 1;
}

.addtask:hover, .del-cat:hover {
  transform: translateY(-50%) scale(1.2)
}

.del-cat {
  position: absolute;
  right: 0.5rem;
  transform: translateY(-50%)
}

.cat-body {
  width: 100%;
  height: 80vh;
  margin-top: 0.8rem;
  float: left;
  overflow-y: auto;
}

.task {
  background-color: #292929;
  width: 95%;
  border-radius: 10px;
  font-size: 18px;
  font-weight: 500;
  padding: 0.75rem 0.75rem 0.5rem 0.75rem;
  margin: 0rem 0.5rem 0.5rem 0.5rem;
  position: relative;
  cursor: pointer;
}

.task:hover, .cdk-drag-preview {
  border: 1px solid #6e6e6e;
}

/* done this way, because cdkDrag deletes styles inside it */
.task > .deleteTask {
  background-color: #292929;
  position: absolute;
  top: 0.4rem;
  right: 0.4rem;
}

.task > .deleteTask:hover {
  background-color: #3a3a3a;
}

.task > .taskHeader {
  font-weight: bold;
  font-size: large;
  margin-bottom: 0.5rem;
}

.task > .taskDescription {
  word-wrap: break-word;
  color: #aeaeae;
}

.cdk-drag-preview {
  box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
              0 8px 10px 1px rgba(0, 0, 0, 0.14),
              0 3px 14px 2px rgba(0, 0, 0, 0.12);
}

.cdk-drag-placeholder {
  opacity: 0;
}

.cdk-drag-animating {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}

.avatar {
  display: inline-block;
  margin-top: 0.5rem;
}

.avatar img {
  width: 2.5rem;
  border-radius: 50%
}

